FARRAGO: lose extraneous -Djava.ext.dirs specification for SqlLine
[git-p4: depot-paths = "//open/dt/dev/": change = 4179]